--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   },
   "homepage": "https://github.com/bartholomej/csfd-magnets#readme",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "form-urlencoded": "^6.1.0",
     "piratebay-scraper": "^4.0.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
     "@types/copy-webpack-plugin": "^10.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/node": "^18.11.18",
     "@types/zip-webpack-plugin": "^3.0.3",
